<resources>
    <string name="app_name">Powerhawk Realtime</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_max_display_name">Max Value</string>
    <string name="pref_min_display_name">Min Value</string>
    <string name="new_notification">Add new rule</string>
    <string name="pref_title_meters_list">Select Meter</string>
    <string name="pref_title_remove_list">Select Rule To Remove</string>
    <string name="pref_title_stats_list">Select Data Type</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="default_notification_label">Notification Rule</string>

    <string name="pref_title_new_message_notifications">Allow notifications</string>
    <string name="pref_title_new_notifications_rule">New Rule</string>

    <string name="add_rule_button">New Rule</string>
    <string name="remove_rule_button">Remove Rule</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="title_activity_firebase_login">FirebaseLoginActivity</string>

    <string name="enter_server_edittext">Enter IP adress of server</string>
    <string name="add_server">Continue</string>

    <string name="auth_failed">authorization failed</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="title_activity_load_from_database">LoadFromDatabase</string>
    <string name="title_activity_first_time_setup">FirstTimeSetupActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
