<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackGroundNew"
    tools:context="informationaesthetics.powerhawkrt.FirebaseLoginActivity">

    <EditText
        android:id="@+id/UserEditText"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:hint="@string/email_edit_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        android:id="@+id/PasswordEditText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/bordergraph"
            android:text="@string/sign_up"
            android:id="@+id/fb_sign_up"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bordergraph"
            android:layout_height="match_parent"
            android:id="@+id/fb_sign_in"
            android:text="@string/sign_in" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/loginlogo"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/legacy"
        android:text="LegacyMode"
        android:onClick="onClick"/>

</LinearLayout>
